* Cache trusted hosts to be able to resolv them in case of DNS resolving failure,
  fixes fusioninventory/fusioninventory-agent#1033
* Refactoring of communication with server to share compressing code between used classes and
  to better report import errors when refused by the server
* Handle early received SIGUSR1 signal as runnow request in place of killing the service
* Report dedicated warning when inventory support is disabled server-side
* win32: Add API to request win32 registry value with better Unicode support
* win32: Get rid of encodeFromRegistry() API after enhanced Unicode registry support
* Get rid of JSON::PP
* fix #393: Support ssl-fingerprint option as a comma-separated list

inventory:
* check if we are running in a container before checking we are running in a virtualmachine
* fix #135: Add MeshCentral as new recognized remote_mgmt, thanks to @miguelanruiz
* fix #171: Add support for Trend Micro Security Agent antivirus on win32
* fix #185: Normalize power supplies max power on Watt unit
* Fix KingMax memory module manufacturer detection
* Fix Positivo Informatica memory module manufacturer detection
* Fix Samsung S22E390 monitor serialnumber
* fix #196: don't inventory 2 times libvirt qemu virtualmachines on linux
* Enhanced network adapter type detection on windows 10
* fix #119: Use deviceid instead of agentid for json filename
* fix #199: Fix GPU VRAM inventory on win32
* Enhanced video card inventory on linux
* fix #198: Fix enhancing storage inventory on win32
* Fixed few minor issues while refactoring getFileHandle API
* fix #229: Wrong vm name with Proxmox
* MacOS: Refactoring to remove XML::XPath dependency
* MacOS: Don't detect usb tablet as storage
* MacOS: Support cd-rom reader inventory as storage
* Update system users detection for WSL inventory on win32
* fix #240: Update battery inventory on win32
* Use ORACLE_BASE environment so Oracle database inventory supports latest versions