@@ -25,6 +25,10 @@
 #maxrate        = 600
 #maxrate_period = 600
 
+# By default, any client can use this plugin features.
+# Set it to "yes" to only trust clients defined in the httpd-trust agent configuration.
+#forbid_not_trusted = no
+
 # You should create and define you specific parameter in the following
 # included configuration file to override any default.
 # For example just set "disabled = no" in it to enable the plugin
