@@ -31,6 +31,10 @@
 #maxrate        = 30
 #maxrate_period = 3600
 
+# By default, any client can use this plugin features.
+# Set it to "yes" to only trust clients defined in the httpd-trust agent configuration.
+#forbid_not_trusted = no
+
 # The maximum number of forked handled request
 #max_proxy_threads = 10
 
